# cherry

./: Cargo.toml
cherry/: Cargo.toml
cherry-derive/: Cargo.toml
cherry-derive/src/: attrs.rs  lib.rs
cherry-derive/src/backend/: mod.rs
cherry-derive/src/backend/common/: mod.rs  table.rs
cherry-derive/src/backend/mysql/: insert.rs  mod.rs
cherry-derive/src/backend/postgres/: insert.rs  mod.rs
cherry-derive/src/datasource/: parse.rs
cherry-derive/src/old/cherry/: mod.rs
cherry-macros/: Cargo.toml
cherry-macros/src/: attrs.rs  lib.rs  utils.rs
cherry-macros/src/backend/: mod.rs
cherry-macros/src/backend/common/: mod.rs  schema.rs  table.rs
cherry-macros/src/backend/mysql/: insert.rs
cherry-macros/src/backend/postgres/: insert.rs
cherry-macros/src/patch/: parse.rs
cherry-macros/src/schema/: mod.rs  parse.rs
cherry-macros/src/table/: mod.rs  parse.rs
cherry/src/: connection.rs  datasource.rs  lib.rs  schema.rs  table.rs
cherry/src/query/: delete.rs  gen_impl.rs  insert.rs  insert_update.rs  query_builder.rs  select.rs  update.rs
example/: Cargo.toml
src/: connection.rs  datasource.rs  lib.rs
src/clause/: like.rs  mod.rs  order.rs  wher.rs
src/query/: builder.rs  gen_impl.rs  mod.rs  query_builder.rs  select.rs
src/statement/: delete.rs  execute.rs  insert.rs  insert_update.rs  mod.rs  select.rs  update.rs
