[package]
name = "cherry-macros"
version = "0.8.6"
authors = ["moritz"]
edition = "2021"
description = "lightweight procedural macros bringing orm-like features to sqlx"
homepage = "https://github.com/NyxCode/cherry"
license = "MIT"

[lib]
proc-macro = true

[features]
sqlite = []
mysql = []
postgres = []
query = []

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
once_cell = "1"
proc-macro-error = "1"
multimap = "0.8.3"
